[workspace]
members = ["crates/models", "crates/core", "crates/cli", "crates/runners", "crates/state", "xtask"]
resolver = "2"

[workspace.package]
authors = ["Butterflow Team"]
description = "A self-hostable workflow engine for code transformations"
documentation = "https://docs.rs/butterflow"
repository = "https://github.com/codemod-com/butterflow"
license = "MIT"
rust-version = "1.70"

[workspace.dependencies]
tokio = { version = "1.36", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
thiserror = "2.0"
anyhow = "1.0"
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
async-trait = "0.1"
env_logger = "0.11"
reqwest = { version = "0.12", features = ["json"] }
regex = "1.10"
futures = "0.3"
clap = { version = "4.5", features = ["derive"] }
butterflow-models = { path = "crates/models", version = "0.1.0" }
