[package]
name = "xtask"
version = "0.1.0"
edition = "2021"
authors.workspace = true
description.workspace = true
documentation.workspace = true
repository.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
clap.workspace = true
butterflow-models.workspace = true
schemars = "0.8.22"
serde_json.workspace = true
