[package]
name = "codemod"
version.workspace = true
edition = "2021"
authors.workspace = true
description.workspace = true
documentation.workspace = true
repository.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
butterflow-models = { workspace = true }
butterflow-core = { workspace = true }
butterflow-state = { workspace = true }
butterflow-runners = { workspace = true }
codemod-sandbox = { workspace = true }
tokio = { workspace = true }
clap = { version = "4.5", features = ["derive"] }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
dirs = "5.0"
regex = { workspace = true }
walkdir = "2.4"
tempfile = "3.8"
num_cpus = "1.16"
thiserror = { workspace = true }

# Testing framework dependencies
libtest-mimic = "0.8"
similar = "2.0"
notify = "8.0"
ast-grep-language.workspace = true

[features]
default = []
docker = ["butterflow-models/docker", "butterflow-runners/docker"]
podman = ["butterflow-models/podman", "butterflow-runners/podman"]
