[package]
name = "codemod"
version.workspace = true
edition = "2021"
authors.workspace = true
description.workspace = true
documentation.workspace = true
repository.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
butterflow-models = { workspace = true }
butterflow-core = { workspace = true }
butterflow-state = { workspace = true }
butterflow-runners = { workspace = true }
codemod-sandbox = { workspace = true }
tokio = { workspace = true }
clap = { version = "4.5", features = ["derive"] }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
dirs = "5.0"
regex = { workspace = true }
walkdir = "2.4"
tempfile = "3.8"
num_cpus = "1.16"
thiserror = { workspace = true }

# OIDC and HTTP dependencies
reqwest = { version = "0.11", features = ["json", "rustls-tls", "multipart"] }
oauth2 = "4.4"
url = "2.4"
base64 = "0.22"
sha2 = "0.10"
rand = "0.8"
hyper = { version = "0.14", features = ["full"] }
hyper-rustls = "0.24"
rustls = "0.21"
tokio-rustls = "0.24"
percent-encoding = "2.3"
open = "5.0"

# Testing framework dependencies
libtest-mimic = "0.8"
similar = "2.0"
notify = "8.0"
ast-grep-language.workspace = true

# Additional dependencies for registry commands
urlencoding = "2.1"
flate2 = "1.0"
tar = "0.4"
humantime = "2.1"

[features]
default = []
docker = ["butterflow-models/docker", "butterflow-runners/docker"]
podman = ["butterflow-models/podman", "butterflow-runners/podman"]
