[package]
name = "codemod-sandbox"
version.workspace = true
edition = "2021"
build = "src/build.rs"

[dependencies]
rquickjs = { git = "https://github.com/DelSkayn/rquickjs.git", version = "0.9.0", default-features = false, optional = true }
thiserror = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
regex = { workspace = true }
tokio = { version = "1.0", features = [
  "rt-multi-thread",
  "macros",
  "fs",
], optional = true }
bytes = "1.0"
oxc_resolver = "11.6"
swc_core = { version = "33.0", features = [
  "common",
  "base",
  "ecma_ast_serde",
  "ecma_codegen",
  "ecma_minifier",
  "ecma_transforms",
  "ecma_transforms_typescript",
  "ecma_transforms_optimization",
  "ecma_transforms_react",
  "ecma_parser",
  "ecma_parser_typescript",
  "ecma_utils",
  "ecma_visit",
] }
swc_ts_fast_strip = "27.0.1"
wasm-bindgen = { workspace = true, optional = true }
wasm-bindgen-futures = { workspace = true, optional = true }
js-sys = { workspace = true, optional = true }
web-tree-sitter-sg = { git = "https://github.com/mohebifar/tree-sitter-wasm.git", branch = "upgrade/0.25.4", optional = true }
serde-wasm-bindgen = { version = "0.6", optional = true }
ast-grep-core = { version = "0.38.6", default-features = false, optional = true }
ast-grep-config = { version = "0.38.6", default-features = false, optional = true }
llrt_modules = { path = "../../submodules/llrt/llrt_modules", default-features = true, optional = true }
ignore = { workspace = true, optional = true }
serde_yaml = { workspace = true, optional = true }
codemod-ast-grep-dynamic-lang = { path = "../codemod-ast-grep-dynamic-lang", optional = true }
reqwest.workspace = true
tokio-stream = "0.1.17"
dirs.workspace = true

[dev-dependencies]
tempfile = { workspace = true }

[features]
default = ["native", "real-fs"]
wasm = [
  "mock-fs",
  "ast-grep-core",
  "ast-grep-config",
  "web-tree-sitter-sg",
  "wasm-bindgen",
  "wasm-bindgen-futures",
  "js-sys",
  "serde-wasm-bindgen",
  "rquickjs/futures",
  "rquickjs/bindgen",
  "rquickjs/loader",
  "rquickjs/macro",
]
native = [
  "real-fs",
  "ast-grep-core/tree-sitter",
  "ast-grep-config/tree-sitter",
  "llrt_modules",
  "rquickjs",
  "rquickjs/full-async",
  "tokio",
  "serde_yaml",
  "codemod-ast-grep-dynamic-lang",
]
real-fs = ["tokio", "ignore"]
mock-fs = []
