[package]
name = "butterflow-core"
version.workspace = true
edition = "2021"
authors.workspace = true
description.workspace = true
documentation.workspace = true
repository.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
butterflow-models = { workspace = true }
butterflow-runners = { workspace = true }
butterflow-state = { workspace = true }
butterflow-scheduler = { workspace = true }
codemod-sandbox = { path = "../codemod-sandbox", features = ["native"] }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
log = { workspace = true }
async-trait = { workspace = true }
regex = { workspace = true }
reqwest = { workspace = true }
flate2 = { workspace = true }
tar = { workspace = true }
tempfile = { workspace = true }
walkdir = { workspace = true }
dirs = { workspace = true }
ast-grep-dynamic.workspace = true

[dev-dependencies]
tempfile = { workspace = true }
serial_test = "3.2.0"

[features]
default = []
docker = []
podman = []
