[package]
name = "butterflow-models"
version = "0.1.0"
edition = "2021"
authors.workspace = true
description.workspace = true
documentation.workspace = true
repository.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
regex = { workspace = true }
reqwest = { workspace = true }
schemars = "1.0.0-alpha.17"
ts-rs = { version = "10.1.0", features = [
    "chrono-impl",
    "uuid-impl",
    "serde-json-impl",
    "serde-compat",
] }
