[package]
name = "butterflow-runners"
version.workspace = true
edition = "2021"
authors.workspace = true
description.workspace = true
documentation.workspace = true
repository.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
butterflow-models = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
log = { workspace = true }
async-trait = { workspace = true }
uuid = { workspace = true }

[features]
docker = ["butterflow-models/docker"]
podman = ["butterflow-models/podman"]
