[package]
name = "butterflow-scheduler"
version = "0.1.0"
edition = "2021"
authors.workspace = true
description.workspace = true
documentation.workspace = true
repository.workspace = true
license.workspace = true
rust-version.workspace = true

[lib]
crate-type = ["lib", "cdylib"]

[dependencies]
butterflow-models = { path = "../models" }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true, features = ["v4"] }
log = { workspace = true }
wasm-bindgen = "0.2.100"
serde-wasm-bindgen = "0.6.5"
wasm-bindgen-futures = "0.4.43"

[target.'cfg(target_arch = "wasm32")'.dependencies]
uuid = { workspace = true, features = ["v4", "js"] }

[dev-dependencies]
tokio = { workspace = true }
async-trait = "0.1"
chrono = "0.4"

[features]
default = []
