[package]
name = "butterflow-scheduler"
version = "0.1.0"
edition = "2021"
authors.workspace = true
description.workspace = true
documentation.workspace = true
repository.workspace = true
license.workspace = true
rust-version.workspace = true

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
butterflow-models = { path = "../models", features = ["docker", "podman"] }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true, features = ["v4"] }
log = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
uuid = { workspace = true, features = ["v4", "js"] }
wasm-bindgen = { workspace = true }
serde-wasm-bindgen = "0.6.5"
wasm-bindgen-futures = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
async-trait = "0.1"
chrono = "0.4"

[features]
default = []
