[package]
name = "butterflow-scheduler"
version.workspace = true
edition = "2021"
authors.workspace = true
description.workspace = true
documentation.workspace = true
repository.workspace = true
license.workspace = true
rust-version.workspace = true

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
butterflow-models = { workspace = true, features = ["docker", "podman"] }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true, features = ["v4"] }
log = { workspace = true }
wasm-bindgen = { workspace = true, optional = true }
serde-wasm-bindgen = { optional = true, version = "0.6.5" }
wasm-bindgen-futures = { workspace = true, optional = true }
js-sys = { workspace = true, optional = true }

[dev-dependencies]
tokio = { workspace = true }
async-trait = "0.1"
chrono = "0.4"

[features]
default = []
wasm = ["uuid/js", "wasm-bindgen", "wasm-bindgen-futures", "js-sys"]
